[project]
name = "finance-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mysql-connector-python>=9.3.0",
    "plotly>=6.1.2",
    "sqlalchemy>=2.0.41",
    "streamlit>=1.46.0",
]
[tool.ruff]
lint.extend-select = [
    "ALL"
]

lint.ignore = [
    "Q000", 
    "Q002", 
    "ANN001",
    "ANN201",
    "FBT003",
    "FBT002", 
    "D213",
    "D211",
]

# Allow lines to be as long as 100.
line-length = 100

# Group violations by containing file.
output-format = "grouped"